omni/tests/goldens/types/undefined_ident_09.err
tests/goldens/types/undefined_ident_09.omni:1:19: error: undefined identifier "missing9"
  let result9:int = missing9
                    ^~~ hint: declare the name before using it
